# cs3820-ps1

./: .devcontainer.json  Problems1.cabal  Problems1.hs  Tests.hs
.github/: ISSUE_TEMPLATE.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
